# nai

./: .gitignore  README.md  flake.nix  game.py  main.py  pyproject.toml  test_game.py
.github/workflows/: test-game.yaml
.zed/: settings.json
1-game/: ANALYSIS.md  README.md  analysis.py  game.py  main.py  pyproject.toml
1-game/typings/easyAI/AI/: SSS.pyi
2-fuzzy/: README.md  control.py  pyproject.toml
2-fuzzy/.zed/: settings.json
3-recommendation/: README.md  main.py  pyproject.toml
3-recommendation/data/: movies.json  users.json
4-classification/: README.md  main.py  pyproject.toml
5-neural-net/: README.md  cifar10.py  fashion.py  hiragana.py  main.py  pyproject.toml  util.py  wheat_seeds.py
5-neural-net/data/: .gitignore  wheat_seeds.csv
6-computer-vision/: README.md  main.py  pyproject.toml
7-reinforcement-learning/: .gitignore  README.md  main.py  pyproject.toml
fuzzy/: README.md  control.py  main.py  pyproject.toml  simulator.py
game/: README.md  game.py  main.py  test_game.py
game/typings/easyAI/AI/: DUAL.pyi  HashTranspositionTable.pyi  Negamax.pyi  TranspositionTable.pyi  __init__.pyi  solving.pyi
typings/easyAI/: Player.pyi  TwoPlayerGame.pyi  __init__.pyi
typings/easyAI/AI/: DictTranspositionTable.pyi  MTdriver.pyi  NonRecursiveNegamax.pyi
