[project]
name = "nai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "1-game",
    "2-fuzzy",
    "3-recommendation",
    "4-classification",
    "5-neural-net",
    "6-computer-vision",
    "7-reinforcement-learning",
]
