[project]
name = "3-recommendation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "simple-term-menu>=1.6.6",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.7",
    "ruff>=0.14.0",
]
